baked-chicken.html completed and folder for images added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/baked-chicken.html">Crispy Baked Chicken with Giardiniera</a> 
+    <ul>
+        <li><a href="./recipes/baked-chicken.html">Crispy Baked Chicken with Giardiniera</a></li> 
+    </ul>
 </body>
 </html>
