cake.html complete + link to original recipe websit + link to home page + # of servings for each recipe

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="./recipes/baked-chicken.html">Crispy Baked Chicken with Giardiniera</a></li> 
+        <li><a href="./recipes/baked-chicken.html">Crispy Baked Chicken with Giardiniera</a></li>
+        <li><a href="./recipes/sandwich.html">Nashville Hot Chicken and Waffle Sandwich</a></li>
+        <li><a href="./recipes/cake.html">Wacky Cake</a></li>
     </ul>
 </body>
 </html>
