--- a/recipes/baked-chicken.html
+++ b/recipes/baked-chicken.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Baked Chicken</title>
+    <title>Crispy Baked Chicken with Giardiniera</title>
 </head>
 <body>
     <h1>Crispy Baked Chicken with Giardiniera</h1>
@@ -14,6 +14,7 @@
     <p>Perfectly tender and juicy chicken cutlets are topped with mild or hot giardiniera (your choice!) and provolone cheese. Play around with different crouton flavors for variety.</p>
     
     <h2>Ingredients</h2>
+    <p>For 4 servings:</p>
     <ul>
         <li>4 (4 ounce) boneless, skinless chicken breasts</li>
         <li>salt and freshly ground black pepper to taste</li>
@@ -35,6 +36,7 @@
         <li>Heat oil over medium heat in a large oven-proof skillet until hot. Fry chicken for 2 minutes, flip, and fry an additional 2 minutes. Remove from heat. Top each breast with 2 tablespoons giardiniera and 1 slice of cheese.</li>
         <li>Cook in the preheated oven until chicken is no longer pink in the center and the juices run clear, 8 to 10 minutes. An instant-read thermometer inserted into the center should read at least 165 degrees F (74 degrees C). Top with parsley before serving.</li>
     </ol>
+    <p>Access the origianl recipe website <a href="https://www.allrecipes.com/recipe/284836/crispy-baked-chicken-with-giardiniera/" target="_blank">here</a>.</p>
     <a href="../index.html">Home Page</a>
 </body>
 </html>
